--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
                     e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
             <picture>
-                <source media="(max-width: 300px)" srcset="imagens/dan-droids-100.png" type="image/png">
-                <source media="(max-width: 650px)" srcset="imagens/dan-droids-200.png" type="image/png">
-                <source media="(max-width: 1050px)" srcset="imagens/dan-droids-pq.png" type="image/png">
-                <source media="(max-width: 1200px)" srcset="imagens/dan-droids-700.png" type="image/png">
+                <source media="(max-width: 650px)" srcset="imagens/dan-droids-pq.png" type="image/png
                 <img src="imagens/dan-droids.png" alt="imgflex">
             </picture>
 
@@ -53,17 +50,13 @@
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
             <picture>
-                <source media="(max-width: 300px)" srcset="imagens/irina-blok-100.jpg" type="image/jpg">
-                <source media="(max-width: 650px)" srcset="imagens/irina-blok-200.jpg" type="image/jpg">
-                <source media="(max-width: 1050px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
-                <source media="(max-width: 1200px)" srcset="imagens/irina-blok-700.jpg" type="image/jpg">
+                <source media="(max-width: 650px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
                 <img src="imagens/irina-blok.jpg" alt="imagemflex">
             </picture>
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
 
             <picture>
-                <source media="(max-width: 300px)" srcset="imagens/bugdroid-100.png" type="image/png">
                 <source media="(max-width: 650px)" srcset="imagens/bugdroid-200.png" type="image/png">
                 <img src="imagens/bugdroid.png" alt="imagembugdroid">
             </picture>
