--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
 
             <picture>
-                <source media="(max-width: 650px)" srcset="imagens/bugdroid-200.png" type="image/png">
+                <source media="(max-width: 650px)" srcset="imagens/bugdroid-pq.png" type="image/png">
                 <img src="imagens/bugdroid.png" alt="imagembugdroid">
             </picture>
 
