--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
             <picture>
-                <source media="(max-width: 650px)" srcset="imagens/dan-droids-pq.png" type="image/png
+                <source media="(max-width: 650px)" srcset="imagens/dan-droids-pq.png" type="image/png">
                 <img src="imagens/dan-droids.png" alt="imgflex">
             </picture>
 
